Updating some links

--- a/community.html
+++ b/community.html
@@ -33,10 +33,10 @@
 </p>
 			<h2>Member Blogs</h2>
 			<p><a href="http://akingdomofexiles.wordpress.com/" target="_blank">A Kingdom of Exiles</a> (J.P. Conway)<br />
-			  <a href="http://ccotten.wordpress.com/" target="_blank">Anastasis</a> (Chris Cotten)<br />
-		    <a href="http://acklen.wordpress.com/" target="_blank">Our Missions</a></p>
+
 	  <h2>Our Friends &amp; Neighbors</h2>
 <p>
+  <a href="https://sukumamillers.wordpress.com/">The Millers in Tanzania</a><br />
     <a href="http://www.lipscomb.edu" target="_blank">Lipscomb University</a><br />
     <a href="http://www.roomintheinn.org/" target="_blank">Room in the Inn</a><br />
     <a href="http://www.lawrenceavehere4u.com/index.html" target="_blank">Lawrence Avenue Church of Christ</a><br/>
