--- a/community.html
+++ b/community.html
@@ -43,6 +43,32 @@
 <a href="http://www.ueckyiv.org/" target="_blank" title="Ukrainian Education Center">Ukrainian Education Center</a><br/>
 <a href="http://www.kyivmission.org/" target="_blank" title="Mere Christianity Study Guide">Kyiv Mission Site - www.kyivmission.org</a><br/></p>
 
+<h2>Acklen Partners</h2>
+
+<p>Over the years, Acklen has continually sought to discern its relationship to the community.  
+
+Specifically, we seek tangible ways to be salt and light in Nashville.  We value partnering with the 
+
+many excellent local ministries and non-profits in the city. Among those, we highlight local ministries 
+
+and non-profits where a member works, serves on the board, volunteers in an integral way, or where 
+
+Acklen has a collective history.</p>
+
+<p>We are proud to lift up these as Acklen Partners:</p>
+
+<p><a href="http://www.siloamhealth.org/">Siloam Family Health Center</a><br /> 
+<a href="http://www.nationsministrycenter.org/">Nations Ministry</a><br />
+<a href="http://www.rideforreading.org/">Ride for Reading</a><br />
+<a href="http://www.rmhcnashville.com/">Ronald McDonald House</a><br /> 
+<a href="http://opentablenashville.org/">Open Table</a><br />
+<a href="http://www.luke1412.org/">Luke 14:12</a><br />
+<a href="http://safehaven.org/">Safe Haven Family Shelter</a><br />
+<a href="http://www.roomintheinn.org/">Room in the Inn</a><br />
+<a href="https://www.sths.com/Pages/About-Us/Mission-Integration/Family-Health-Clinics.aspx">St. Thomas Family Health Center South</a><br /> 
+<a href="http://www.mhc-tn.org/">Mental Health Cooperative</a><br />
+<a href="http://archive.tennessean.com/article/DN/20131208/NEWS01/312080071/Lipscomb-students-female-prisoners-share-classes-life-lessons">LIFE Program-TN Prison for Women</a></p> 
+
 <h2>Pictures</h2>
 <p>	  <img src="images/community/01.jpg"/><br/><br/>
 	  	  <img src="images/community/02.jpg"/><br/><br/>
