Add a few more song URLs

--- a/songbook/index.html
+++ b/songbook/index.html
@@ -102,7 +102,7 @@
         {
           "number": 13,
           "title": "Come and Fill Our Hearts",
-          "link": ""
+          "link": "https://www.youtube.com/watch?v=vT35E6NrrpQ"
         },
         {
           "number": 14,
@@ -262,12 +262,12 @@
         {
           "number": 45,
           "title": "In Moments Like These",
-          "link": ""
+          "link": "http://newtestamentchurch.org/friends/music/McCoy/MC2002-11.mp3"
         },
         {
           "number": 46,
           "title": "In the Lord I'll Be Ever Thankful",
-          "link": ""
+          "link": "https://www.youtube.com/watch?v=vI5RMQkby_Q"
         },
         {
           "number": 47,
