Add some synthesized audio files

--- a/songbook/index.html
+++ b/songbook/index.html
@@ -212,7 +212,7 @@
         {
           "number": 35,
           "title": "Holy Rest",
-          "link": ""
+          "link": "audio/Holy Rest.mp3"
         },
         {
           "number": 36,
@@ -272,7 +272,7 @@
         {
           "number": 47,
           "title": "Let All Mortal Flesh Keep Silence",
-          "link": ""
+          "link": "audio/Let All Mortal Flesh.mp3"
         },
         {
           "number": 48,
@@ -327,7 +327,7 @@
         {
           "number": 58,
           "title": "O Lord and Master of My Life",
-          "link": ""
+          "link": "audio/O Lord and Master of My Life.mp3"
         },
         {
           "number": 59,
@@ -497,7 +497,7 @@
         {
           "number": 214,
           "title": "Lord Christ Beneath Thy Starry Dome",
-          "link": ""
+          "link": "audio/Lord Christ Beneath Thy Starry Dome.mp3"
         },
         {
           "number": 215,
@@ -507,7 +507,7 @@
         {
           "number": 216,
           "title": "On Jordan's Bank the Baptist's Cry",
-          "link": ""
+          "link": "audio/On Jordans Bank the Baptists Cry.mp3"
         },
         {
           "number": 217,
@@ -522,7 +522,7 @@
         {
           "number": 219,
           "title": "Rejoice, Rejoice Believers",
-          "link": ""
+          "link": "audio/Rejoice Rejoice Believers.mp3"
         },
       ]);
 
