Add lean modal for alert message.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <link href="styles.css" rel="stylesheet" type="text/css" media="screen">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
+<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
 </head>
 
-<body>
+<body name='la-message' href='#la-message'>
 <div id="wrapper">
   <div id="logo"><img src="images/acklen_logo.jpg" width="244" height="87" alt="Acklen Avenue Church of Christ" /></div>
   <div id="nav">
@@ -70,9 +71,17 @@
         <li><a href="who.html">Who We Are</a></li>
         <li><a href="community.html">Community Life</a></li>
         
-      <li><a href="location.html">Location & Service Times</a></li></ul>
+      <li><a href="location.html">Location &amp; Service Times</a></li></ul>
     </div>
     <div id="footer_copyright">© 2012  Acklen Avenue Church of Christ <strong>900 Acklen Avenue Nashville, TN 37203</strong><a href="contact.html">Contact Us</a></div></div>
+</div>
+<div id="la-message" class="modal_close" >
+<h3>Greetings!</h3>
+<p style="margin-bottom: 5px; margin-top: 5px;">
+  The Acklen Avenue congregation will <b>not</b> meet Sunday Morning, September 9th, 2016 at 900 Acklen Avenue.  We are having a joint worship with our sister congregation Lawrence Ave Church of Christ.  Please come and join us!
+  <br/>
+</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12890.178073262963!2d-86.7836279!3d36.128953!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x921780348108d832!2sLawrence+Avenue+Church-Christ!5e0!3m2!1sen!2sus!4v1474344790330" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 </body>
 </html>
