modal for holiday 2016

--- a/index.html
+++ b/index.html
@@ -75,5 +75,25 @@
     </div>
     <div id="footer_copyright">© 2012  Acklen Avenue Church of Christ <strong>900 Acklen Avenue Nashville, TN 37203</strong><a href="contact.html">Contact Us</a></div></div>
 </div>
+<div id="la-message" class="modal_close" data-year="2017" data-day="01" data-month="01">
+<h3>Greetings!</h3>
+<p style="margin-bottom: 5px; margin-top: 5px;">
+  Over the holiday season the Acklen Avenue congregation will have the following schedule changes:<br/>
+  <ul style="margin-left:15px;">
+  <li>
+    We will have church <b>Sunday morning</b> on <b>December 25</b> and <b>January 1</b> however worship is at <b>10 am</b> and there will be no class.
+  </li>
+  <li>
+    <b>Sunday night</b> bible study on <b>December 25</b> and <b>January 1</b> is canceled.
+  </li>   
+  <li>
+    <b>Wednesday night</b> bible study on <b>December 21 and 28</b> is canceled.
+  </li>
+  </ul>
+  <br/>
+  Please come and join us!
+  <br/>
+</p>
+</div>
 </body>
 </html>
