added 40 days pdf and link in community resources

--- a/community.html
+++ b/community.html
@@ -31,6 +31,10 @@
 <p>
 <a href="http://acklen.org/images/KingdomWitnessinTheCity.pdf" target="_blank">Kingdom Witness in the City</a>
 </p>
+<p>
+<a href="http://acklen.org/images/40days.pdf" target="_blank">40 Days</a> - A guide to your first 40 days as a newly baptized Christian.
+</p>
+
 			<h2>Member Blogs</h2>
 			<p><a href="http://akingdomofexiles.wordpress.com/" target="_blank">A Kingdom of Exiles</a> (J.P. Conway)<br />
 
