--- a/who.html
+++ b/who.html
@@ -33,7 +33,8 @@
             <li>We believe God changes us to be more like Jesus. In baptism, God acts to forgive our sins and to empower us with the Holy Spirit. Baptism is an initiatory rite of passage into the kingdom community, which begins a lifelong journey of transformation into the image of God.</li>
             <li>We believe God calls believers into the church, an outpost of his kingdom. We believe the church is a worshipping community united around the table of the Lord, nourished by its participation in the body of Christ, and anticipating his return.</li>
             <li>We believe God calls all believers to service or ministry based on unique and specific God-given gifts empowered by the Spirit. We believe ministry is equally shared between all members of the body. We do call elders and deacons to serve the congregation through specific ministries of pastoral guidance and service.</li>
-</ul>
+            <li>We value intergenerational community and seek to resist age segregation. We value times when all ages can listen to and learn from each other as they all pursue Christlikeness.</li>
+          </ul>
 <p>We believe the kingdom is God’s new reality, a way of living in the world. At Acklen Avenue, we embody this reality in the following traits:</p>
 <ul>
       <li>We value the community we share with each other in Christ. We don’t measure community by agreement but by commitment to God and each other. We enjoy free and open dialogue. We value a communal approach to the interpretation of Scripture.</li>
