updated verbiage other bullet

--- a/who.html
+++ b/who.html
@@ -45,7 +45,7 @@
 
 <li>We value our religious inheritance in the churches of the <a href="http://www.mun.ca/rels/restmov/restmov.html">Stone-Campbell Restoration Movement</a> and, more specifically, the Churches of Christ.</li>
 
-<li>We value our local community. The majority of our congregation lives and works in Nashville. Our worship services and ministries are open to all. We embrace the biblical command to show hospitality to strangers, exiles, and the poor. From November through March, we have a weekly commitment with <a href="http://www.roomintheinn.org/">Room in the Inn</a>. Also, we are involved in missions in Central America and Africa.</li> 
+<li>We value our local community. The majority of our congregation lives and works in Nashville. We connect with the community primarily through our involvement with our Acklen Partners: community non-profits and ministries where our members work and volunteer. Our worship services and ministries are open to all. We embrace the biblical command to show hospitality to strangers, exiles, and the poor. From November through March, we have a weekly commitment with <a href="http://www.roomintheinn.org/">Room in the Inn</a>. Also, we are involved in missions in Central America, Haiti, and Africa.</li>
 </ul>
 </div>
 </div>
