format updates, remote html comment, amp changes

--- a/location.html
+++ b/location.html
@@ -1,78 +1,89 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Acklen Avenue Church of Christ</title>
-<link href="styles.css" rel="stylesheet" type="text/css" media="screen">
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="js/scripts.js"></script>
-<script>
-<!--
-function wopen(url, name, w, h)
-{
-// Fudge factors for window decoration space.
- // In my tests these work well on all platforms & browsers.
 
- var win = window.open(url,
-  name,
-  'width=' + w + ', height=' + h + ', ' +
-  'location=no, menubar=no, ' +
-  'status=no, toolbar=no, scrollbars=no, resizable=no');
- win.resizeTo(w, h);
- win.focus();
-}
-// -->
-</script> 
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>Acklen Avenue Church of Christ</title>
+  <link href="styles.css" rel="stylesheet" type="text/css" media="screen">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
+  <script>
+      function wopen(url, name, w, h) {
+        // Fudge factors for window decoration space.
+        // In my tests these work well on all platforms & browsers.
+
+        var win = window.open(url,
+          name,
+          'width=' + w + ', height=' + h + ', ' +
+          'location=no, menubar=no, ' +
+          'status=no, toolbar=no, scrollbars=no, resizable=no');
+        win.resizeTo(w, h);
+        win.focus();
+      }
+  </script>
 </head>
 
 <body>
-<div id="wrapper">
-  <div id="logo"><img src="images/acklen_logo.jpg" width="244" height="87" alt="Acklen Avenue Church of Christ" /></div>
-  <div id="nav">
-  <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="who.html">Who We Are</a></li>
-  <li><a href="community.html">Community Life</a></li>
-  <li><a href="location.html">Location & Service Times</a></li></ul>
-  </div>
-  <div id="container_interior">
-<div id="content">
-  <h1>Location &amp; Service Times</h1>
-			<h2>Location</h2>
-			<p>The Acklen Avenue Church of Christ is located at the corner of Acklen Avenue &amp; Wedgewood Avenue in the heart of Nashville, Tennessee.</p>
-	  <p>Our address is:<br />
-900 Acklen Avenue<br />
-		    Nashville, TN 37203</p>
-	  
-	     <iframe width="640" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=900+Acklen+Avenue+Nashville,+TN+37203-5410&amp;ie=UTF8&amp;hq=&amp;hnear=900+Acklen+Ave,+Nashville,+Tennessee+37203&amp;gl=us&amp;t=h&amp;z=14&amp;vpsrc=0&amp;ll=36.134273,-86.782359&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=900+Acklen+Avenue+Nashville,+TN+37203-5410&amp;ie=UTF8&amp;hq=&amp;hnear=900+Acklen+Ave,+Nashville,+Tennessee+37203&amp;gl=us&amp;t=h&amp;z=14&amp;vpsrc=0&amp;ll=36.134273,-86.782359&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
-<!--<p><a href="map.html" target="_popup" onClick="wopen('map.html', 'popup', 660, 660); return false;">View Map</a></p>-->
-<br/><br/>
-			<h2>Service Times</h2>
-			<h3>Worship</h3>
-            <p><strong>Sunday Morning Worship</strong> begins at 9:00 AM and usually lasts about an hour. The service includes prayer, Bible readings, songs, a sermon, and the Lord’s Supper. Afterwards, coffee and donuts are served. There is a cry room in the back of the auditorium as well as a nursery downstairs.</p>
-
-<p><strong>Sunday Evening Worship</strong> begins at 5:00 PM and usually lasts 45 minutes. The service includes prayer, Bible readings, songs, a brief sermon, and the Lord’s Supper.</p>
-<h3>Bible Study </h3>
-  <p><strong>Sunday Morning Bible Study</strong> is from 10:15-11:00 AM. We have classes for adults and children. Classes are relaxed and discussion oriented.</p>
-  
-  <p><strong>Wednesday Night Bible Study</strong> is from 6:30-7:30 PM. After a short time of singing and prayer in the auditorium, we break into children and adult classes.</p>
-  
-  <h3>Small Group Ministry</h3>
-  <p>Jesus calls us into spiritual community. One of the ways we practice this is through small groups. Currently, we have four small groups meeting in homes. Three meet on Sunday night, and one meets on Monday night. Groups meet for about an hour to share life together, pray, and discuss the Bible. Kids are always welcome.</p>
-</div>
-</div>
-</div>
-<div id="footer_wrap">
-  <div id="footer">
-    <div id="footer_icons"><a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a><a href="https://twitter.com/AcklenAvenue" target="_blank"><img src="images/icon_twitter.gif" alt="Twitter" width="32" height="32" border="0" class="icon_pad" /></a></div>
-    <div id="footer_nav">
-    <ul>
+  <div id="wrapper">
+    <div id="logo"><img src="images/acklen_logo.jpg" width="244" height="87" alt="Acklen Avenue Church of Christ" /></div>
+    <div id="nav">
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="who.html">Who We Are</a></li>
-        <li><a href="community.html">Community Life</a>
-      <li><a href="location.html">Location & Service Times</a></li></ul>
+        <li><a href="community.html">Community Life</a></li>
+        <li><a href="location.html">Location &amp; Service Times</a></li>
+      </ul>
     </div>
-    <div id="footer_copyright">© 2012  Acklen Avenue Church of Christ <strong>900 Acklen Avenue Nashville, TN 37203</strong><a href="mailto:info@acklen.org">Contact Us</a></div></div>
-</div>
+    <div id="container_interior">
+      <div id="content">
+        <h1>Location &amp; Service Times</h1>
+        <h2>Location</h2>
+        <p>The Acklen Avenue Church of Christ is located at the corner of Acklen Avenue &amp; Wedgewood Avenue in the heart
+          of Nashville, Tennessee.</p>
+        <p>Our address is:<br /> 900 Acklen Avenue<br /> Nashville, TN 37203</p>
+
+        <iframe width="640" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=900+Acklen+Avenue+Nashville,+TN+37203-5410&amp;ie=UTF8&amp;hq=&amp;hnear=900+Acklen+Ave,+Nashville,+Tennessee+37203&amp;gl=us&amp;t=h&amp;z=14&amp;vpsrc=0&amp;ll=36.134273,-86.782359&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=900+Acklen+Avenue+Nashville,+TN+37203-5410&amp;ie=UTF8&amp;hq=&amp;hnear=900+Acklen+Ave,+Nashville,+Tennessee+37203&amp;gl=us&amp;t=h&amp;z=14&amp;vpsrc=0&amp;ll=36.134273,-86.782359&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+        <!--<p><a href="map.html" target="_popup" onClick="wopen('map.html', 'popup', 660, 660); return false;">View Map</a></p>-->
+        <br/><br/>
+        <h2>Service Times</h2>
+        <h3>Worship</h3>
+        <p><strong>Sunday Morning Worship</strong> begins at 9:00 AM and usually lasts about an hour. The service includes prayer,
+          Bible readings, songs, a sermon, and the Lord’s Supper. Afterwards, coffee and donuts are served. There is a cry
+          room in the back of the auditorium as well as a nursery downstairs.</p>
+
+        <p><strong>Sunday Evening Worship</strong> begins at 5:00 PM and usually lasts 45 minutes. The service includes prayer,
+          Bible readings, songs, a brief sermon, and the Lord’s Supper.</p>
+        <h3>Bible Study </h3>
+        <p><strong>Sunday Morning Bible Study</strong> is from 10:15-11:00 AM. We have classes for adults and children. Classes
+          are relaxed and discussion oriented.</p>
+
+        <p><strong>Wednesday Night Bible Study</strong> is from 6:30-7:30 PM. After a short time of singing and prayer in the
+          auditorium, we break into children and adult classes.</p>
+
+        <h3>Small Group Ministry</h3>
+        <p>Jesus calls us into spiritual community. One of the ways we practice this is through small groups. Currently, we
+          have four small groups meeting in homes. Three meet on Sunday night, and one meets on Monday night. Groups meet
+          for about an hour to share life together, pray, and discuss the Bible. Kids are always welcome.</p>
+      </div>
+    </div>
+  </div>
+  <div id="footer_wrap">
+    <div id="footer">
+      <div id="footer_icons"><a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
+        <a
+          href="https://twitter.com/AcklenAvenue" target="_blank"><img src="images/icon_twitter.gif" alt="Twitter" width="32" height="32" border="0" class="icon_pad" /></a>
+      </div>
+      <div id="footer_nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="who.html">Who We Are</a></li>
+          <li><a href="community.html">Community Life</a>
+            <li><a href="location.html">Location &amp; Service Times</a></li>
+        </ul>
+      </div>
+      <div id="footer_copyright">© 2012 Acklen Avenue Church of Christ <strong>900 Acklen Avenue Nashville, TN 37203</strong><a href="mailto:info@acklen.org">Contact Us</a></div>
+    </div>
+  </div>
 </body>
+
 </html>
