--- a/location.html
+++ b/location.html
@@ -43,7 +43,6 @@
         <p>Our address is:<br /> 900 Acklen Avenue<br /> Nashville, TN 37203</p>
 
         <iframe width="640" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=900+Acklen+Avenue+Nashville,+TN+37203-5410&amp;ie=UTF8&amp;hq=&amp;hnear=900+Acklen+Ave,+Nashville,+Tennessee+37203&amp;gl=us&amp;t=h&amp;z=14&amp;vpsrc=0&amp;ll=36.134273,-86.782359&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=900+Acklen+Avenue+Nashville,+TN+37203-5410&amp;ie=UTF8&amp;hq=&amp;hnear=900+Acklen+Ave,+Nashville,+Tennessee+37203&amp;gl=us&amp;t=h&amp;z=14&amp;vpsrc=0&amp;ll=36.134273,-86.782359&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
-        <!--<p><a href="map.html" target="_popup" onClick="wopen('map.html', 'popup', 660, 660); return false;">View Map</a></p>-->
         <br/><br/>
         <h2>Service Times</h2>
         <h3>Worship</h3>
@@ -61,9 +60,9 @@
           auditorium, we break into children and adult classes.</p>
 
         <h3>Small Group Ministry</h3>
-        <p>Jesus calls us into spiritual community. One of the ways we practice this is through small groups. Currently, we
-          have four small groups meeting in homes. Three meet on Sunday night, and one meets on Monday night. Groups meet
-          for about an hour to share life together, pray, and discuss the Bible. Kids are always welcome.</p>
+        <p>Jesus calls us into spiritual community. One of the ways we practice this is through small groups. Currently, we 
+          have five small groups meeting in homes. Groups meet for about an hour to share life together, pray, and discuss 
+          the Bible. Kids are always welcome.</p>
       </div>
     </div>
   </div>
