--- a/community.html
+++ b/community.html
@@ -38,14 +38,12 @@
 			<h2>Member Blogs</h2>
 			<p><a href="http://akingdomofexiles.wordpress.com/" target="_blank">A Kingdom of Exiles</a> (J.P. Conway)<br />
 
-	  <h2>Our Friends &amp; Neighbors</h2>
+	  <h2>Our Partners</h2>
 <p>
   <a href="https://sukumamillers.wordpress.com/">The Millers in Tanzania</a><br />
-    <a href="http://www.lipscomb.edu" target="_blank">Lipscomb University</a><br />
     <a href="http://www.roomintheinn.org/" target="_blank">Room in the Inn</a><br />
     <a href="http://www.lawrenceavehere4u.com/index.html" target="_blank">Lawrence Avenue Church of Christ</a><br/>
 <a href="http://www.ueckyiv.org/" target="_blank" title="Ukrainian Education Center">Ukrainian Education Center</a><br/>
-<a href="http://www.kyivmission.org/" target="_blank" title="Mere Christianity Study Guide">Kyiv Mission Site - www.kyivmission.org</a><br/></p>
 
 <h2>Acklen Partners</h2>
 
@@ -75,7 +73,6 @@ Acklen has a collective history.</p>
 
 <h2>Pictures</h2>
 <p>	  <img src="images/community/01.jpg"/><br/><br/>
-	  	  <img src="images/community/02.jpg"/><br/><br/>
 	  	  <img src="images/community/03.jpg"/><br/><br/>
 	  <br/></p>
 </div>
