amps and twitter removal

--- a/location.html
+++ b/location.html
@@ -68,9 +68,8 @@
   </div>
   <div id="footer_wrap">
     <div id="footer">
-      <div id="footer_icons"><a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
-        <a
-          href="https://twitter.com/AcklenAvenue" target="_blank"><img src="images/icon_twitter.gif" alt="Twitter" width="32" height="32" border="0" class="icon_pad" /></a>
+      <div id="footer_icons">
+        <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
       </div>
       <div id="footer_nav">
         <ul>
