--- a/who.html
+++ b/who.html
@@ -18,7 +18,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="who.html">Who We Are</a></li>
         <li><a href="community.html">Community Life</a></li>
-        <li><a href="location.html">Location & Service Times</a></li>
+        <li><a href="location.html">Location &amp; Service Times</a></li>
       </ul>
     </div>
     <div id="container_interior">
@@ -76,16 +76,15 @@
   </div>
   <div id="footer_wrap">
     <div id="footer">
-      <div id="footer_icons"><a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
-        <a
-          href="https://twitter.com/AcklenAvenue" target="_blank"><img src="images/icon_twitter.gif" alt="Twitter" width="32" height="32" border="0" class="icon_pad" /></a>
+      <div id="footer_icons">
+        <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
       </div>
       <div id="footer_nav">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="who.html">Who We Are</a></li>
           <li><a href="community.html">Community Life</a></li>
-          <li><a href="location.html">Location & Service Times</a></li>
+          <li><a href="location.html">Location &amp; Service Times</a></li>
         </ul>
       </div>
       <div id="footer_copyright">© 2012 Acklen Avenue Church of Christ <strong>900 Acklen Avenue Nashville, TN 37203</strong><a href="mailto:info@acklen.org">Contact Us</a></div>
