--- a/location.html
+++ b/location.html
@@ -6,6 +6,7 @@
   <title>Acklen Avenue Church of Christ</title>
   <link href="styles.css" rel="stylesheet" type="text/css" media="screen">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
   <script type="text/javascript" src="js/scripts.js"></script>
   <script>
       function wopen(url, name, w, h) {
