--- a/who.html
+++ b/who.html
@@ -27,8 +27,7 @@
         <p>The Acklen Avenue Church of Christ was organized in January 1934. It moved to its present location in 1955 after
           meeting in nearby houses for more than two decades. God has changed the makeup of our congregation several times
           in our history. Since the late 90s, we have experienced an infusion of young families.</p>
-        <p>Today, we remain a purposefully small congregation, averaging between 80-100 people for Sunday morning worship. We
-          are a young congregation, counting more than 35 young children as an integral part of our number.</p>
+        <p>Today, about 150 people make up our church family, with 60 of those under the age of 18.</p>
         <h2>We Believe</h2>
         <ul>
           <li>We believe in the God who created the heavens and the earth, continues to sustain his creation, and will ultimately
