Location to Visit Us + what to expect verbiage.

--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="who.html">Who We Are</a></li>
         <li><a href="community.html">Community Life</a></li>
-        <li><a href="location.html">Location &amp; Service Times</a></li>
+        <li><a href="location.html">Visit Us</a></li>
       </ul>
     </div>
     <div id="container_interior">
@@ -87,7 +87,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="who.html">Who We Are</a></li>
           <li><a href="community.html">Community Life</a></li>
-          <li><a href="location.html">Location &amp; Service Times</a></li>
+          <li><a href="location.html">Visit Us</a></li>
         </ul>
       </div>
       <div id="footer_copyright">© 2012 Acklen Avenue Church of Christ <strong>900 Acklen Avenue Nashville, TN 37203</strong><a href="mailto:info@acklen.org">Contact Us</a></div>
