--- a/location.html
+++ b/location.html
@@ -32,7 +32,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="who.html">Who We Are</a></li>
         <li><a href="community.html">Community Life</a></li>
-        <li><a href="location.html">Location &amp; Service Times</a></li>
+        <li><a href="location.html">Visit Us</a></li>
       </ul>
     </div>
     <div id="container_interior">
@@ -64,6 +64,30 @@
         <p>Jesus calls us into spiritual community. One of the ways we practice this is through small groups. Currently, we 
           have five small groups meeting in homes. Groups meet for about an hour to share life together, pray, and discuss 
           the Bible. Kids are always welcome.</p>
+        <h2>What to Expect?</h2>
+        <p>Let’s face it. Visiting an unfamiliar worship gathering can be awkward. This is what you can expect at our worship service:
+
+        <p>Our worship begins at 9 AM with a prayer and Scripture reading. If you are late, we understand. You won’t be the only one.</p>
+
+        <p>We keep our kids with us during service. Their noise doesn’t scare us. Trust me, noisy kids will receive smiles not dirty looks. We believe the most formative worship services include all generations. If your child is extra squirmy, feel free to take them back to the cry room or grab a donut early.</p>
+
+        <p>Dress attire runs the full gamut. Some will wear suits and others will wear a t-shirt and jeans. Please feel free to come as you are.</p>
+
+        <p>We will sing about six songs during our service, all without instruments. We enjoy the A Capella tradition of four-part singing. We strive to sing hymns written throughout Christian history, including contemporary songs.</p>
+
+        <p>About 15 minutes in, there will be a 20-25-minute message on a specific section of the Bible. We follow the Revised Common Lectionary, which follows the church seasons and provides four weekly readings for each Sunday.</p>
+
+        <p>About 45 minutes in, we will serve the Lord’s Supper. In our tradition, all baptized disciples partake of communion. However, we serve without question to all who join us.</p>
+
+        <p>After the Lord’s Supper, we take an offering to support our church’s ministries. Half our funds leave our church body to support other ministries, missionaries, and to empower those in poverty.</p>
+
+        <p>Our worship will end around 10 AM with a prayer and Scripture reading.</p>
+
+        <p>After a brief time of announcements, we share in coffee and donuts.</p>
+
+        <p>Some will stay for a class (we offer classes for all ages from 10:20-11:00), and some will head out at this time. Feel free to do what is best for your family.</p>
+
+
       </div>
     </div>
   </div>
@@ -77,7 +101,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="who.html">Who We Are</a></li>
           <li><a href="community.html">Community Life</a>
-            <li><a href="location.html">Location &amp; Service Times</a></li>
+            <li><a href="location.html">Visit Us</a></li>
         </ul>
       </div>
       <div id="footer_copyright">© 2012 Acklen Avenue Church of Christ <strong>900 Acklen Avenue Nashville, TN 37203</strong><a href="mailto:info@acklen.org">Contact Us</a></div>
