link address in footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li><a href="location.html">Location &amp; Service Times</a></li>
         </ul>
       </div>
-      <div id="footer_copyright">© 2012 Acklen Avenue Church of Christ <strong>900 Acklen Avenue Nashville, TN 37203</strong><a href="contact.html">Contact Us</a></div>
+      <div id="footer_copyright">© 2012 Acklen Avenue Church of Christ <strong><a href="https://www.google.com/maps/place/900+Acklen+Ave,+Nashville,+TN+37203/@36.134273,-86.782359,7885m/data=!3m1!1e3!4m5!3m4!1s0x886466800df13e37:0x44e9a64f3aec173a!8m2!3d36.1342847!4d-86.7824671">900 Acklen Avenue Nashville, TN 37203</a></strong><a href="contact.html">Contact Us</a></div>
     </div>
   </div>
   <div id="la-message" class="modal_close" data-year="2017" data-day="01" data-month="01">
