--- a/community.html
+++ b/community.html
@@ -25,6 +25,18 @@
     <div id="container_interior">
       <div id="content">
         <h1>Community Life</h1>
+        <h2>Ways to Connect:</h2>
+        <p>
+          Weekly Sunday Night Small Groups<br />
+          Wednesday Night "Brown Bag" Dinners<br />
+          Weekend Retreats<br />
+          Monthly Women's Book Club<br />
+          Friday Morning Men's Coffee<br />
+          Board Game Nights<br />
+          Co Ed Softball and Men's Basketball teams<br />
+          Weekend Camping Trips<br />
+        </p>
+        
         <h2>Media</h2>
         <p>
           <a href="http://www.ustream.tv/channel/acklen">Sunday morning sermon Streaming Audio</a>
