--- a/community.html
+++ b/community.html
@@ -32,7 +32,7 @@
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="who.html">Who We Are</a></li>
         <li class="nav-item active"><a class="nav-link" href="community.html">Community Life</a></li>
-        <li class="nav-item"><a class="nav-link" href="location.html">Location &amp; Service Times</a></li>
+        <li class="nav-item"><a class="nav-link" href="location.html">Visit Us</a></li>
     </ul>
   </div>
 </nav>
@@ -115,7 +115,7 @@
                          © 2012 Acklen Avenue Church of Christ<br/>
                         </div>
                          <div class="col-lg-5 d-flex justify-content-end">
-                         <strong>900 Acklen Avenue Nashville, TN 37203</strong><br/>
+                         <strong><a href="https://www.google.com/maps/place/900+Acklen+Ave,+Nashville,+TN+37203/@36.134273,-86.782359,7885m/data=!3m1!1e3!4m5!3m4!1s0x886466800df13e37:0x44e9a64f3aec173a!8m2!3d36.1342847!4d-86.7824671">900 Acklen Avenue Nashville, TN 37203</a></strong><br/>
                         </div>
                          <div class="col-lg-2 d-flex justify-content-end">
                          <a href="mailto:info@acklen.org">Contact Us</a></p>
