--- a/location.html
+++ b/location.html
@@ -128,6 +128,16 @@
     </div>
 
 </footer>
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-253145-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-253145-1');
+</script>
+
 </body>
 
 </html>
