--- a/community.html
+++ b/community.html
@@ -77,7 +77,7 @@
             <p>
               <a href="https://www.bridgesfordeafandhh.org/">Bridges for the Deaf and Hard of Hearing</a><br />
               <a href="https://friendslife.org/">Friends Life Community</a><br />
-              <a href="http://archive.tennessean.com/article/DN/20131208/NEWS01/312080071/Lipscomb-students-female-prisoners-share-classes-life-lessons">LIFE Program-TN Prison for Women</a>
+              <a href="http://archive.tennessean.com/article/DN/20131208/NEWS01/312080071/Lipscomb-students-female-prisoners-share-classes-life-lessons">LIFE Program-TN Prison for Women</a><br/>
               <a href="http://www.nationsministrycenter.org/">Nations Ministry</a><br />
               <a href="http://opentablenashville.org/">Open Table</a><br />
               <a href="http://www.rmhcnashville.com/">Ronald McDonald House</a><br />
